[spotless] Move to far more recent Eclipse and format files
uses file from formatter maven plugin which is within last year or so, its in alpha order, formatting LGTM and much improved.  Left the eclipse formatter file as taken from the formatter project (which I'm part of) so future updates can be more easily read.  The project on purpose because its manual with excel to sort is rather flat line to line (no tabbing).